# rag

./: .env.template  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/cache/: manager.py
app/guards/: input.py  output.py
app/ingest/: __init__.py  build_indices.py  chunker.py  loaders.py  upsert.py
app/mcp/: server.py
app/obs/: cost.py
app/rag/: __init__.py  compressor.py  crag_gate.py  embedder.py  generator.py  pipeline.py  reranker.py  retriever.py  rewriter.py  sparse.py  web_fallback.py
evals/: __init__.py  dataset.py  ragas_run.py
scripts/: build_corpus.py
static/: index.html  styles.css
tests/: __init__.py  test_chunker.py  test_embedder.py  test_loaders.py  test_pipeline.py  test_reranker.py  test_retriever.py  test_sparse.py
