[project]
name = "rag"
version = "0.1.0"
description = "Production RAG System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "qdrant-client",
    "sentence-transformers",
    "bm25s",
    "groq",
    "google-generativeai",
    "ragas",
    "datasets",
    "tiktoken",
    "python-dotenv",
    "llmlingua>=0.2.2",
    "cohere",
    "duckduckgo-search>=8.1.1",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "fastmcp>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "langchain-groq",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
